[Angus] Fix horizontal scrollbar.

--- a/web/cobrands/angus/layout.scss
+++ b/web/cobrands/angus/layout.scss
@@ -283,11 +283,11 @@ footer p.social a:active,footer p.social a:focus,footer p.social a:hover
   .container {
     display: block;
     font-size: 0.9em;
-    padding: 1em 20px .75em 20px;
+    padding: 1em 0 0.75em 0;
 
     ul {
       margin: 0;
-      padding: 0;
+      padding: 0 20px;
       list-style: none;
 
       li {
@@ -418,7 +418,6 @@ body.mappage {
 
     .tablewrapper, .tablewrapper.bordered {
       border-top: none;
-      width: 100%;
       color: white;
       padding-bottom: 1em;
 
